--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1 class="hero-h">Effective Solutions<br />for Your Business</h1>
         <button class="hero-btn" type="button">Order Service</button>
       </section>
-      <section class="hero-second-text">
+      <section>
         <h2 class="empty" hidden>non text</h2>
         <ul class="list">
           <li>
