--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
           <li>
             <h3 class="first-heading">Strategy</h3>
             <p class="hero-p">
-              Our goal is to identify the business <br />
-              problem to walk away with the <br />
+              Our goal is to identify the business 
+              problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
