--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </header>
     <main>
       <section class="hero-main-index">
-        <h1 class="hero-h">Effective Solutions<br />for Your Business</h1>
+        <h1 class="hero-h">Effective Solutions for Your Business</h1>
         <button class="hero-btn" type="button">Order Service</button>
       </section>
       <section>
@@ -61,7 +61,7 @@
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="first-heading">Punctuality</h3>
             <p>
               Bring the key message to the <br />
               brand's audience for the best price <br />
@@ -69,7 +69,7 @@
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="first-heading">Diligence</h3>
             <p>
               Research and confirm brands that <br />
               present the strongest digital growth <br />
@@ -77,7 +77,7 @@
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="first-heading">Technologies</h3>
             <p>
               Design practice focused on digital <br />
               experiences. We bring forth a deep <br />
