--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </li>
           <li>
             <h3 class="first-heading">Punctuality</h3>
-            <p>
+            <p class="hero-p">
               Bring the key message to the <br />
               brand's audience for the best price <br />
               within the shortest possible time.
@@ -70,7 +70,7 @@
           </li>
           <li>
             <h3 class="first-heading">Diligence</h3>
-            <p>
+            <p class="hero-p">
               Research and confirm brands that <br />
               present the strongest digital growth <br />
               opportunities and minimize risk.
@@ -78,7 +78,7 @@
           </li>
           <li>
             <h3 class="first-heading">Technologies</h3>
-            <p>
+            <p class="hero-p">
               Design practice focused on digital <br />
               experiences. We bring forth a deep <br />
               passion for problem-solving.
