--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         </ul>
       </section>
       <section>
-        <h2>What are we doing</h2>
-        <ul>
+        <h2 class="hero-heading-third">What are we doing</h2>
+        <ul class="list">
           <li>
             <img src="./images/monitor.jpg" alt="pc" width="360" height="300" />
           </li>
