--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
         </ul>
       </section>
       <section>
-        <h2>Our Team</h2>
-        <ul>
+        <h2 class="hero-heading-fourth">Our Team</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/mark-guerrero.jpg"
