--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <section class="hero-photo">
         <h2 class="hero-heading-fourth">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="hero-finish-text">
             <img
               src="./images/mark-guerrero.jpg"
               alt="mark guerrero"
@@ -116,8 +116,8 @@
               height="260"
             />
 
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="first-heading">Mark Guerrero</h3>
+            <p class="hero-p">Product Designer</p>
           </li>
           <li>
             <img
@@ -127,8 +127,8 @@
               height="260"
             />
 
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="first-heading">Tom Ford</h3>
+            <p class="hero-p">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -138,8 +138,8 @@
               height="260"
             />
 
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="first-heading">Camila Garcia</h3>
+            <p class="hero-p">Marketing</p>
           </li>
           <li>
             <img
@@ -149,8 +149,8 @@
               height="260"
             />
 
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="first-heading">Daniel Wilson</h3>
+            <p class="hero-p">UI Designer</p>
           </li>
         </ul>
       </section>
