--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <h3 class="first-heading">Mark Guerrero</h3>
             <p class="hero-p">Product Designer</p>
           </li>
-          <li>
+          <li hero-finish-text>
             <img
               src="./images/tom-ford.jpg"
               alt="tom ford"
@@ -130,7 +130,7 @@
             <h3 class="first-heading">Tom Ford</h3>
             <p class="hero-p">Frontend Developer</p>
           </li>
-          <li>
+          <li hero-finish-text>
             <img
               src="./images/camila-garcia.jpg"
               alt="cemila garcia "
@@ -141,7 +141,7 @@
             <h3 class="first-heading">Camila Garcia</h3>
             <p class="hero-p">Marketing</p>
           </li>
-          <li>
+          <li hero-finish-text>
             <img
               src="./images/daniel-wilson.jpg"
               alt="daniel wilson"
