--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       <nav class="navigation">
         <a href="./index.html" class="header-logo link"
-          >web<span class="logo-studio"> Studio </span></a
+          >web<span class="logo-studio">Studio</span></a
         >
         <ul class="list">
           <li>
@@ -55,8 +55,7 @@
           <li>
             <h3 class="first-heading">Strategy</h3>
             <p class="hero-p">
-              Our goal is to identify the business 
-              problem to walk away with the
+              Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
@@ -119,7 +118,7 @@
             <h3 class="first-heading">Mark Guerrero</h3>
             <p class="hero-p">Product Designer</p>
           </li>
-          <li hero-finish-text>
+          <li>
             <img
               src="./images/tom-ford.jpg"
               alt="tom ford"
@@ -130,7 +129,7 @@
             <h3 class="first-heading">Tom Ford</h3>
             <p class="hero-p">Frontend Developer</p>
           </li>
-          <li hero-finish-text>
+          <li>
             <img
               src="./images/camila-garcia.jpg"
               alt="cemila garcia "
@@ -141,7 +140,7 @@
             <h3 class="first-heading">Camila Garcia</h3>
             <p class="hero-p">Marketing</p>
           </li>
-          <li hero-finish-text>
+          <li>
             <img
               src="./images/daniel-wilson.jpg"
               alt="daniel wilson"
