--- a/portfolio.html
+++ b/portfolio.html
@@ -54,26 +54,33 @@
           <li><button class="hero-button" type="button">Design</button></li>
           <li><button class="hero-button" type="button">Marketing</button></li>
         </ul>
+
         <ul class="hero-img list">
           <li>
-            <img src="images/1.jpg" alt="Banking" width="360" height="300" />
-            <h2 class="hero-main-h">Banking App Interface Concept</h2>
+            <a href="images/1.jpg" alt="Banking" width="360" height="300"></a>
+            <h3 class="hero-main-h">Banking App Interface Concept</h3>
             <p class="hero-main-bottom">App</p>
           </li>
 
           <li>
-            <img
-              src="images/2.jpg"
+            <a
+              href="images/2.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
-            />
+            ></a>
             <h3 class="hero-main-h">Cashless Payment</h3>
             <p class="hero-main-bottom">Marketing</p>
           </li>
 
           <li>
-            <img src="images/3.jpg" alt="Meditation" width="360" height="300" />
+            <a
+              href="images/3.jpg"
+              alt="Meditation"
+              width="360"
+              height="300"
+            ></a>
+
             <h3 class="hero-main-h">Meditation App</h3>
             <p class="hero-main-bottom">App</p>
           </li>
