--- a/index.html
+++ b/index.html
@@ -114,11 +114,10 @@
               width="264"
               height="260"
             />
-
             <h3 class="first-heading">Mark Guerrero</h3>
             <p class="hero-p">Product Designer</p>
           </li>
-          <li>
+          <li class="hero-finish-text">
             <img
               src="./images/tom-ford.jpg"
               alt="tom ford"
@@ -140,7 +139,7 @@
             <h3 class="first-heading">Camila Garcia</h3>
             <p class="hero-p">Marketing</p>
           </li>
-          <li>
+          <li class="hero-finish-text">
             <img
               src="./images/daniel-wilson.jpg"
               alt="daniel wilson"
