--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="foot">
       <img src="./images/Logo.svg" alt="logo" />
 
       <p>
