--- a/index.html
+++ b/index.html
@@ -155,11 +155,12 @@
     </main>
 
     <footer class="foot">
-      <img src="./images/Logo.svg" alt="logo" />
-
+      <a href="./index.html" class="header-logo link"
+      >web<span class="logo-studio">Studio</span></a
+    >
       <p>
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
+        Increase the flow of customers and 
+        sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
