--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <footer class="foot">
       <a href="./index.html" class="header-logo link"
-      >web<span class="logo-studio">Studio</span></a
+      >web<span class="logo-studio-foot">Studio</span></a
     >
       <p>
         Increase the flow of customers and 
