--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <header>
       <nav class="navigation">
         <a href="./index.html" class="header-logo link"
-          >web<span class="logo-studio"> Studio </span></a
+          >web<span class="logo-studio">Studio</span></a
         >
         <ul class="list">
           <li>
@@ -138,12 +138,13 @@
       </section>
     </main>
 
-    <footer class="footer list">
-      <img src="./images/Logo2.svg" alt="logo" />
-
-      <p class="footer-bottom">
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
+    <footer class="foot">
+      <a href="./index.html" class="header-logo link"
+      >web<span class="logo-studio-foot">Studio</span></a
+    >
+      <p>
+        Increase the flow of customers and 
+        sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
