--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
         </ul>
 
         <ul class="hero-img list">
-          <li>
+          <li class="link">
             <a href="images/1.jpg" alt="Banking" width="360" height="300"></a>
             <h3 class="hero-main-h">Banking App Interface Concept</h3>
             <p class="hero-main-bottom">App</p>
