--- a/portfolio.html
+++ b/portfolio.html
@@ -56,8 +56,8 @@
         </ul>
 
         <ul class="hero-img list">
-          <li class="link">
-            <a href="images/1.jpg" alt="Banking" width="360" height="300"></a>
+          <li>
+            <a class="link" href="images/1.jpg" alt="Banking" width="360" height="300"></a>
             <h3 class="hero-main-h">Banking App Interface Concept</h3>
             <p class="hero-main-bottom">App</p>
           </li>
