--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,9 @@
 
         <ul class="hero-img list">
           <li>
-            <a class="link" href="images/1.jpg" alt="Banking" width="360" height="300"></a>
+            <a class="link" href="images/1.jpg">
+              <img src="images/1.jpg" alt="Banking" width="360" height="300" />
+            </a>
             <h3 class="hero-main-h">Banking App Interface Concept</h3>
             <p class="hero-main-bottom">App</p>
           </li>
@@ -140,11 +142,10 @@
 
     <footer class="foot">
       <a href="./index.html" class="header-logo link"
-      >web<span class="logo-studio-foot">Studio</span></a
-    >
+        >web<span class="logo-studio-foot">Studio</span></a
+      >
       <p>
-        Increase the flow of customers and 
-        sales for your business with digital
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
