--- a/portfolio.html
+++ b/portfolio.html
@@ -57,11 +57,11 @@
 
         <ul class="hero-img list">
           <li>
-            <a class="link" href="images/1.jpg">
+            <a class="link" href="">
               <img src="images/1.jpg" alt="Banking" width="360" height="300" />
+              <h2 class="hero-main-h">Banking App Interface Concept</h2>
+              <p class="hero-main-bottom">App</p>
             </a>
-            <h2 class="hero-main-h">Banking App Interface Concept</h2>
-            <p class="hero-main-bottom">App</p>
           </li>
 
           <li>
