--- a/portfolio.html
+++ b/portfolio.html
@@ -58,26 +58,28 @@
         <ul class="hero-img list">
           <li>
             <a class="link" href="">
-              <img src="images/1.jpg" alt="Banking" width="360" height="300" />
+              <img src=".images/1.jpg" alt="Banking" width="360" height="300" />
               <h2 class="hero-main-h">Banking App Interface Concept</h2>
               <p class="hero-main-bottom">App</p>
             </a>
           </li>
 
           <li>
-            <a
-              href="images/2.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            ></a>
-            <h2 class="hero-main-h">Cashless Payment</h2>
-            <p class="hero-main-bottom">Marketing</p>
+            <a class="link" href="">
+              <img
+                src=".images/2.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h2 class="hero-main-h">Cashless Payment</h2>
+              <p class="hero-main-bottom">Marketing</p>
+            </a>
           </li>
 
           <li>
-            <a
-              href="images/3.jpg"
+            <a class="link" href=""
+           src   href="images/3.jpg"
               alt="Meditation"
               width="360"
               height="300"
