--- a/portfolio.html
+++ b/portfolio.html
@@ -78,65 +78,100 @@
           </li>
 
           <li>
-            <a class="link" href=""
-           src   href="images/3.jpg"
+            <a
+              class="link"
+              href=""
+              src=".images/3.jpg"
               alt="Meditation"
               width="360"
               height="300"
-            ></a>
-
-            <h2 class="hero-main-h">Meditation App</h2>
-            <p class="hero-main-bottom">App</p>
+            >
+              <h2 class="hero-main-h">Meditation App</h2>
+              <p class="hero-main-bottom">App</p>
+            </a>
           </li>
 
           <li>
-            <img src="images/4.jpg" alt="Taxi" width="360" height="300" />
-            <h3 class="hero-main-h">Taxi Service</h3>
-            <p class="hero-main-bottom">Marketing</p>
+            <a
+              class="link"
+              href=""
+              src=".images/4.jpg"
+              alt="Taxi"
+              width="360"
+              height="300"
+            >
+              <h2 class="hero-main-h">Taxi Service</h2>
+              <p class="hero-main-bottom">Marketing</p>
+            </a>
           </li>
 
           <li>
-            <img src="images/5.jpg" alt="phone" width="360" height="300" />
-            <h2 class="hero-main-h">Screen Illustrations</h2>
-            <p class="hero-main-bottom">Design</p>
+            <a
+              class="link"
+              href=""
+              src=".images/5.jpg"
+              alt="phone"
+              width="360"
+              height="300"
+            >
+              <h2 class="hero-main-h">Screen Illustrations</h2>
+              <p class="hero-main-bottom">Design</p>
+            </a>
           </li>
 
           <li>
-            <img src="images/6.jpg" alt="Online" width="360" height="300" />
-            <h2 class="hero-main-h">Online Courses</h2>
-            <p class="hero-main-bottom">Marketing</p>
+            <a
+              class="link"
+              href=""
+              src=".images/6.jpg"
+              alt="Online"
+              width="360"
+              height="300"
+            >
+              <h2 class="hero-main-h">Online Courses</h2>
+              <p class="hero-main-bottom">Marketing</p>
+            </a>
           </li>
 
           <li>
-            <img
-              src="images/7.jpg"
+            <a
+              class="link"
+              href=""
+              src=".images/7.jpg"
               alt="Instagram Stories"
               width="360"
               height="300"
-            />
-            <h2 class="hero-main-h">Instagram Stories Concept</h2>
-            <p class="hero-main-bottom">Design</p>
+            >
+              <h2 class="hero-main-h">Instagram Stories Concept</h2>
+              <p class="hero-main-bottom">Design</p>
+            </a>
           </li>
 
           <li>
-            <img
-              src="images/8.jpg"
+            <a
+              class="link"
+              href=""
+              src=".images/8.jpg"
               alt="Organic Food"
               width="360"
               height="300"
-            />
-            <h2 class="hero-main-h">Organic Food</h2>
-            <p class="hero-main-bottom">Web Site</p>
+            >
+              <h2 class="hero-main-h">Organic Food</h2>
+              <p class="hero-main-bottom">Web Site</p>
+            </a>
           </li>
           <li>
-            <img
-              src="images/9.jpg"
+            <a
+              class="link"
+              href=""
+              src=".images/9.jpg"
               alt="Cup of Coffee"
               width="360"
               height="300"
-            />
-            <h2 class="hero-main-h">Fresh Coffee</h2>
-            <p class="hero-main-bottom">Web Site</p>
+            >
+              <h2 class="hero-main-h">Fresh Coffee</h2>
+              <p class="hero-main-bottom">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
