--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
             <a class="link" href="">
               <img
                 src=".images/2.jpg"
-                alt="Cashless Payment"
+                alt="Cashless-Payment"
                 width="360"
                 height="300"
               />
