--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
             <a class="link" href="">
               <img
                 src=".images/2.jpg"
-                alt="Cashless-Payment"
+                alt="Cashless Payment"
                 width="360"
                 height="300"
               />
@@ -78,97 +78,60 @@
           </li>
 
           <li>
-            <a
-              class="link"
-              href=""
-              src=".images/3.jpg"
-              alt="Meditation"
-              width="360"
-              height="300"
-            >
+            <a class="link" href="">
+              src=".images/3.jpg" alt="Meditation" width="360" height="300"
+
               <h2 class="hero-main-h">Meditation App</h2>
               <p class="hero-main-bottom">App</p>
             </a>
           </li>
 
           <li>
-            <a
-              class="link"
-              href=""
-              src=".images/4.jpg"
-              alt="Taxi"
-              width="360"
-              height="300"
-            >
+            <a class="link" href="">
+              src=".images/4.jpg" alt="Taxi" width="360" height="300" >
               <h2 class="hero-main-h">Taxi Service</h2>
               <p class="hero-main-bottom">Marketing</p>
             </a>
           </li>
 
           <li>
-            <a
-              class="link"
-              href=""
-              src=".images/5.jpg"
-              alt="phone"
-              width="360"
-              height="300"
-            >
+            <a class="link" href="">
+              src=".images/5.jpg" alt="phone" width="360" height="300" >
               <h2 class="hero-main-h">Screen Illustrations</h2>
               <p class="hero-main-bottom">Design</p>
             </a>
           </li>
 
           <li>
-            <a
-              class="link"
-              href=""
-              src=".images/6.jpg"
-              alt="Online"
-              width="360"
-              height="300"
-            >
+            <a class="link" href="">
+              src=".images/6.jpg" alt="Online" width="360" height="300" >
               <h2 class="hero-main-h">Online Courses</h2>
               <p class="hero-main-bottom">Marketing</p>
             </a>
           </li>
 
           <li>
-            <a
-              class="link"
-              href=""
-              src=".images/7.jpg"
-              alt="Instagram Stories"
-              width="360"
+            <a class="link" href="">
+              src=".images/7.jpg" alt="Instagram Stories" width="360"
               height="300"
-            >
+
               <h2 class="hero-main-h">Instagram Stories Concept</h2>
               <p class="hero-main-bottom">Design</p>
             </a>
           </li>
 
           <li>
-            <a
-              class="link"
-              href=""
-              src=".images/8.jpg"
-              alt="Organic Food"
-              width="360"
-              height="300"
-            >
+            <a class="link" href="">
+              src=".images/8.jpg" alt="Organic Food" width="360" height="300"
+
               <h2 class="hero-main-h">Organic Food</h2>
               <p class="hero-main-bottom">Web Site</p>
             </a>
           </li>
           <li>
-            <a
-              class="link"
-              href=""
-              src=".images/9.jpg"
-              alt="Cup of Coffee"
-              width="360"
-              height="300"
-            >
+            <a class="link" href="">
+              src=".images/9.jpg" alt="Cup of Coffee" width="360" height="300"
+
               <h2 class="hero-main-h">Fresh Coffee</h2>
               <p class="hero-main-bottom">Web Site</p>
             </a>
