--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,12 @@
 
           <li>
             <a class="link" href="">
-              src=".images/3.jpg" alt="Meditation" width="360" height="300"
+              <img
+                src=".images/3.jpg"
+                alt="Meditation"
+                width="360"
+                height="300"
+              />
 
               <h2 class="hero-main-h">Meditation App</h2>
               <p class="hero-main-bottom">App</p>
@@ -88,7 +93,7 @@
 
           <li>
             <a class="link" href="">
-              src=".images/4.jpg" alt="Taxi" width="360" height="300" >
+              <img src=".images/4.jpg" alt="Taxi" width="360" height="300" />
               <h2 class="hero-main-h">Taxi Service</h2>
               <p class="hero-main-bottom">Marketing</p>
             </a>
@@ -96,7 +101,7 @@
 
           <li>
             <a class="link" href="">
-              src=".images/5.jpg" alt="phone" width="360" height="300" >
+              <img src=".images/5.jpg" alt="phone" width="360" height="300" />
               <h2 class="hero-main-h">Screen Illustrations</h2>
               <p class="hero-main-bottom">Design</p>
             </a>
@@ -104,7 +109,7 @@
 
           <li>
             <a class="link" href="">
-              src=".images/6.jpg" alt="Online" width="360" height="300" >
+              <img src=".images/6.jpg" alt="Online" width="360" height="300" />
               <h2 class="hero-main-h">Online Courses</h2>
               <p class="hero-main-bottom">Marketing</p>
             </a>
@@ -112,7 +117,7 @@
 
           <li>
             <a class="link" href="">
-              src=".images/7.jpg" alt="Instagram Stories" width="360"
+              <img src=".images/7.jpg" alt="Instagram Stories" width="360" />
               height="300"
 
               <h2 class="hero-main-h">Instagram Stories Concept</h2>
@@ -122,7 +127,12 @@
 
           <li>
             <a class="link" href="">
-              src=".images/8.jpg" alt="Organic Food" width="360" height="300"
+              <img
+                src=".images/8.jpg"
+                alt="Organic Food"
+                width="360"
+                height="300"
+              />
 
               <h2 class="hero-main-h">Organic Food</h2>
               <p class="hero-main-bottom">Web Site</p>
