--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,12 @@
           </li>
           <li>
             <a class="link" href="">
-              src=".images/9.jpg" alt="Cup of Coffee" width="360" height="300"
+              <img
+                src=".images/9.jpg"
+                alt="Cup of Coffee"
+                width="360"
+                height="300"
+              />
 
               <h2 class="hero-main-h">Fresh Coffee</h2>
               <p class="hero-main-bottom">Web Site</p>
