--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
         <ul class="hero-img list">
           <li>
             <a class="link" href="">
-              <img src=".images/1.jpg" alt="Banking" width="360" height="300" />
+              <img src="./images/1.jpg" alt="Banking" width="360" height="300" />
               <h2 class="hero-main-h">Banking App Interface Concept</h2>
               <p class="hero-main-bottom">App</p>
             </a>
@@ -67,7 +67,7 @@
           <li>
             <a class="link" href="">
               <img
-                src=".images/2.jpg"
+                src="./images/2.jpg"
                 alt="Cashless Payment"
                 width="360"
                 height="300"
@@ -80,7 +80,7 @@
           <li>
             <a class="link" href="">
               <img
-                src=".images/3.jpg"
+                src="./images/3.jpg"
                 alt="Meditation"
                 width="360"
                 height="300"
@@ -93,7 +93,7 @@
 
           <li>
             <a class="link" href="">
-              <img src=".images/4.jpg" alt="Taxi" width="360" height="300" />
+              <img src="./images/4.jpg" alt="Taxi" width="360" height="300" />
               <h2 class="hero-main-h">Taxi Service</h2>
               <p class="hero-main-bottom">Marketing</p>
             </a>
@@ -101,7 +101,7 @@
 
           <li>
             <a class="link" href="">
-              <img src=".images/5.jpg" alt="phone" width="360" height="300" />
+              <img src="./images/5.jpg" alt="phone" width="360" height="300" />
               <h2 class="hero-main-h">Screen Illustrations</h2>
               <p class="hero-main-bottom">Design</p>
             </a>
@@ -109,7 +109,7 @@
 
           <li>
             <a class="link" href="">
-              <img src=".images/6.jpg" alt="Online" width="360" height="300" />
+              <img src="./images/6.jpg" alt="Online" width="360" height="300" />
               <h2 class="hero-main-h">Online Courses</h2>
               <p class="hero-main-bottom">Marketing</p>
             </a>
@@ -117,7 +117,7 @@
 
           <li>
             <a class="link" href="">
-              <img src=".images/7.jpg" alt="Instagram Stories" width="360" />
+              <img src="./images/7.jpg" alt="Instagram Stories" width="360" />
               height="300"
 
               <h2 class="hero-main-h">Instagram Stories Concept</h2>
@@ -128,7 +128,7 @@
           <li>
             <a class="link" href="">
               <img
-                src=".images/8.jpg"
+                src="./images/8.jpg"
                 alt="Organic Food"
                 width="360"
                 height="300"
@@ -141,7 +141,7 @@
           <li>
             <a class="link" href="">
               <img
-                src=".images/9.jpg"
+                src="./images/9.jpg"
                 alt="Cup of Coffee"
                 width="360"
                 height="300"
