--- a/portfolio.html
+++ b/portfolio.html
@@ -164,7 +164,7 @@
       <a href="./index.html" class="header-logo link"
         >web<span class="logo-studio-foot">Studio</span></a
       >
-      <p>
+      <p class="footer-bottom">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
